@@ -1,3 +1,8 @@
+2010-02-23  Pablo de la Concepción <pablo.concepcion@artica.es>
+
+	* godmode/setup/gis_step_2.php, godmode/gis_maps/configure_gis_map.php: 
+	Usability improvements, change some texts, added some contextual tips.
+
 2010-02-23  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_gis.php: change the function "activateAjaxRefresh" for
